@@ -1,3 +1,4 @@
+* BUG#7626 Fix the effective date check when starting a billing information endorsement
 * BUG#7815 A new mandate must be created when the payer changes
 
 Version 1.14 - 2017-11-09
